Сделал заглушку для проектов

--- a/src/posts/projects/project-0-openfactoring.mdx
+++ b/src/posts/projects/project-0-openfactoring.mdx
@@ -7,70 +7,70 @@ publicData: Sep 11th 2020
 pagesCount: 22
 pages: 
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Главная,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/2.jpg
             - title: Для Поставщиков,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/3.jpg
             - title: Для Покупателей,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/4.jpg
             - title: О Факторинге,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/5.jpg
             - title: Работа в компании,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/6.jpg
             - title: Документация,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/7.jpg
             - title: Контакты,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Список новостей,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Новость,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Вакансии,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Вакансия,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Факторинг,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Агентский факторинг,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Индивидуальные решения,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Комплексная программа,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Онлайн факторинг,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: О компании,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Факторинг Микс,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Факторинг-Классик,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Льготный факторинг,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Факторинг Лукойл,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Факторинг Лендинг
 sortIdx: 0
 ---
