--- a/src/posts/projects/project-10-rschip.mdx
+++ b/src/posts/projects/project-10-rschip.mdx
@@ -7,31 +7,31 @@ publicData: Sep 11th 2020
 pagesCount: 9
 pages: 
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Главная,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Страница товара RS,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Страница товара Chip,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Страница товара RS GTR,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Страница Магазина,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Страница Корзины,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Страница Оформления,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Страница FAQ,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Страница Контакты
 sortIdx: 10
 ---
