--- a/src/posts/projects/project-140-wellbeing.mdx
+++ b/src/posts/projects/project-140-wellbeing.mdx
@@ -7,28 +7,28 @@ publicData: Sep 11th 2020
 pagesCount: 8
 pages: 
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Главная,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Уровень энергии,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: сон,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Активность,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Внимание и эффективность,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Общие вопросы,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Стресс,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Питание
 sortIdx: 140
 ---
