--- a/src/posts/projects/project-190-dr-krisin.mdx
+++ b/src/posts/projects/project-190-dr-krisin.mdx
@@ -7,19 +7,19 @@ publicData: Sep 11th 2020
 pagesCount: 5
 pages: 
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Главная,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: О докторе,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Операции,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Статья,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Статьи
 sortIdx: 190
 ---
