--- a/src/posts/projects/project-360-akvahit.mdx
+++ b/src/posts/projects/project-360-akvahit.mdx
@@ -7,40 +7,40 @@ publicData: Sep 11th 2020
 pagesCount: 12
 pages: 
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Главная,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: О нас,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Бренды,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Карточки,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Контакты,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Доставка,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Гарантия,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Заказ,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Оплата,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Продукты,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Возврат,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Детали
 sortIdx: 360
 ---
