--- a/src/posts/projects/project-390-confidence.mdx
+++ b/src/posts/projects/project-390-confidence.mdx
@@ -7,10 +7,10 @@ publicData: Sep 11th 2020
 pagesCount: 2
 pages: 
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Главная,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Логин
 sortIdx: 390
 ---
