--- a/src/posts/projects/project-160-starmap.mdx
+++ b/src/posts/projects/project-160-starmap.mdx
@@ -7,7 +7,7 @@ publicData: Sep 11th 2020
 pagesCount: 1
 pages: 
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Title
 sortIdx: 160
 ---
