--- a/src/posts/projects/project-180-tachos.mdx
+++ b/src/posts/projects/project-180-tachos.mdx
@@ -7,16 +7,16 @@ publicData: Sep 11th 2020
 pagesCount: 4
 pages: 
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Главная,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Продукт,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Команда,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Инфо
 sortIdx: 180
 ---
