--- a/src/posts/projects/project-70-acpgame.mdx
+++ b/src/posts/projects/project-70-acpgame.mdx
@@ -7,34 +7,34 @@ publicData: Sep 11th 2020
 pagesCount: 10
 pages: 
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Главная,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: В СМИ,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Игры,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Команда,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: О нас,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Битва-Корпораций,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: ФОТОАЛЬБОМЫ,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Корпоративные-Игры,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Контакты,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Видео
 sortIdx: 70
 ---
