--- a/src/posts/projects/project-90-holybasil.mdx
+++ b/src/posts/projects/project-90-holybasil.mdx
@@ -7,13 +7,13 @@ publicData: Sep 11th 2020
 pagesCount: 3
 pages: 
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Главная,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Доставка,
         - page:
-            - image: test
+            - image: ../../assets/images/projects/project-0-openfactoring/1.jpg
             - title: Политика
 sortIdx: 90
 ---
