--- a/src/posts/projects/project-0-openfactoring.mdx
+++ b/src/posts/projects/project-0-openfactoring.mdx
@@ -13,67 +13,79 @@ pages:
 
   - page:
       - title: Для Поставщиков
-      - image: ../../assets/images/projects/project-0-openfactoring/1.png
+      - image: ../../assets/images/projects/project-0-openfactoring/2.png
 
   - page:
       - title: Для Покупателей
-      - image: ../../assets/images/projects/project-0-openfactoring/1.png
+      - image: ../../assets/images/projects/project-0-openfactoring/3.png
 
   - page:
       - title: О Факторинге
-      - image: ../../assets/images/projects/project-0-openfactoring/1.png
+      - image: ../../assets/images/projects/project-0-openfactoring/4.png
 
   - page:
       - title: Работа в компании
-      - image: ../../assets/images/projects/project-0-openfactoring/1.png
+      - image: ../../assets/images/projects/project-0-openfactoring/5.png
 
   - page:
       - title: Документация
-      - image: ../../assets/images/projects/project-0-openfactoring/1.png
+      - image: ../../assets/images/projects/project-0-openfactoring/6.png
 
   - page:
       - title: Контакты
-      - image: ../../assets/images/projects/project-0-openfactoring/1.png
+      - image: ../../assets/images/projects/project-0-openfactoring/7.png
 
   - page:
       - title: Список новостей
-      - image: ../../assets/images/projects/project-0-openfactoring/1.png
+      - image: ../../assets/images/projects/project-0-openfactoring/8.png
 
   - page:
       - title: Новость
-      - image: ../../assets/images/projects/project-0-openfactoring/1.png
+      - image: ../../assets/images/projects/project-0-openfactoring/9.png
 
   - page:
       - title: Вакансии
-      - image: ../../assets/images/projects/project-0-openfactoring/1.png
-
-  - page:
-      - title: Вакансия
-      - image: ../../assets/images/projects/project-0-openfactoring/1.png
-
-  - page:
-      - title: Факторинг
-      - image: ../../assets/images/projects/project-0-openfactoring/1.png
+      - image: ../../assets/images/projects/project-0-openfactoring/10.png
 
   - page:
       - title: Агентский факторинг
-      - image: ../../assets/images/projects/project-0-openfactoring/1.png
+      - image: ../../assets/images/projects/project-0-openfactoring/11.png
+
+  - page:
+      - title: Факторинг
+      - image: ../../assets/images/projects/project-0-openfactoring/12.png
 
   - page:
       - title: Индивидуальные решения
-      - image: ../../assets/images/projects/project-0-openfactoring/1.png
+      - image: ../../assets/images/projects/project-0-openfactoring/13.png
 
   - page:
       - title: Комплексная программа
-      - image: ../../assets/images/projects/project-0-openfactoring/1.png
+      - image: ../../assets/images/projects/project-0-openfactoring/14.png
 
   - page:
       - title: Онлайн факторинг
-      - image: ../../assets/images/projects/project-0-openfactoring/1.png
+      - image: ../../assets/images/projects/project-0-openfactoring/15.png
 
   - page:
       - title: О компании
-      - image: ../../assets/images/projects/project-0-openfactoring/1.png
+      - image: ../../assets/images/projects/project-0-openfactoring/16.png
+
+  - page:
+      - title: FAQ-desktop
+      - image: ../../assets/images/projects/project-0-openfactoring/17.png
+  - page:
+      - title: Заявка-1
+      - image: ../../assets/images/projects/project-0-openfactoring/18.png
+  - page:
+      - title: Обратная-связь-1-1
+      - image: ../../assets/images/projects/project-0-openfactoring/19.png
+  - page:
+      - title: Поставщики-страница
+      - image: ../../assets/images/projects/project-0-openfactoring/20.png
+  - page:
+      - title: О-факторинге-страница
+      - image: ../../assets/images/projects/project-0-openfactoring/21.png
 
   - page:
       - title: Факторинг Микс
@@ -81,19 +93,19 @@ pages:
 
   - page:
       - title: Факторинг-Классик
-      - image: ../../assets/images/projects/project-0-openfactoring/1.png
+      - image: ../../assets/images/projects/project-0-openfactoring/2.png
 
   - page:
       - title: Льготный факторинг
-      - image: ../../assets/images/projects/project-0-openfactoring/1.png
+      - image: ../../assets/images/projects/project-0-openfactoring/3.png
 
   - page:
       - title: Факторинг Лукойл
-      - image: ../../assets/images/projects/project-0-openfactoring/1.png
+      - image: ../../assets/images/projects/project-0-openfactoring/4.png
 
   - page:
       - title: Факторинг Лендинг
-      - image: ../../assets/images/projects/project-0-openfactoring/1.png
+      - image: ../../assets/images/projects/project-0-openfactoring/5.png
 
 sortIdx: 0
 ---
