--- a/src/posts/projects/project-10-rschip.mdx
+++ b/src/posts/projects/project-10-rschip.mdx
@@ -10,29 +10,39 @@ pages:
   - page:
       - image: ../../assets/images/projects/project-10-rschip/0.png
       - title: Главная
+      - layout: ../../assets/images/projects/project-10-rschip/layout/0.png
+
   - page:
       - image: ../../assets/images/projects/project-10-rschip/1.png
       - title: Страница товара RS
+      - layout: ../../assets/images/projects/project-10-rschip/layout/1.png
   - page:
       - image: ../../assets/images/projects/project-10-rschip/2.png
       - title: Страница товара Chip
+      - layout: ../../assets/images/projects/project-10-rschip/layout/2.png
   - page:
       - image: ../../assets/images/projects/project-10-rschip/3.png
       - title: Страница товара RS GTR
+      - layout: ../../assets/images/projects/project-10-rschip/layout/3.png
   - page:
       - image: ../../assets/images/projects/project-10-rschip/4.png
       - title: Страница Магазина
+      - layout: ../../assets/images/projects/project-10-rschip/layout/4.png
   - page:
       - image: ../../assets/images/projects/project-10-rschip/5.png
       - title: Страница Корзины
+      - layout: ../../assets/images/projects/project-10-rschip/layout/5.png
   - page:
       - image: ../../assets/images/projects/project-10-rschip/6.png
       - title: Страница Оформления
+      - layout: ../../assets/images/projects/project-10-rschip/layout/6.png
   - page:
       - image: ../../assets/images/projects/project-10-rschip/7.png
       - title: Страница FAQ
+      - layout: ../../assets/images/projects/project-10-rschip/layout/7.png
   - page:
       - image: ../../assets/images/projects/project-10-rschip/8.png
       - title: Страница Контакты
+      - layout: ../../assets/images/projects/project-10-rschip/layout/8.png
 sortIdx: 10
 ---
