--- a/src/posts/projects/project-20-montetuning.mdx
+++ b/src/posts/projects/project-20-montetuning.mdx
@@ -10,23 +10,30 @@ pages:
   - page:
       - image: ../../assets/images/projects/project-20-montetuning/0.png
       - title: main
+      - layout: ../../assets/images/projects/project-20-montetuning/layout/0.png
   - page:
       - image: ../../assets/images/projects/project-20-montetuning/1.png
       - title: GT
+      - layout: ../../assets/images/projects/project-20-montetuning/layout/1.png
   - page:
       - image: ../../assets/images/projects/project-20-montetuning/2.png
       - title: GTR
+      - layout: ../../assets/images/projects/project-20-montetuning/layout/2.png
   - page:
       - image: ../../assets/images/projects/project-20-montetuning/3.png
       - title: Shop
+      - layout: ../../assets/images/projects/project-20-montetuning/layout/3.png
   - page:
       - image: ../../assets/images/projects/project-20-montetuning/4.png
       - title: Shop2
+      - layout: ../../assets/images/projects/project-20-montetuning/layout/4.png
   - page:
       - image: ../../assets/images/projects/project-20-montetuning/5.png
       - title: instuction
+      - layout: ../../assets/images/projects/project-20-montetuning/layout/5.png
   - page:
       - image: ../../assets/images/projects/project-20-montetuning/6.png
       - title: Faq
+      - layout: ../../assets/images/projects/project-20-montetuning/layout/6.png
 sortIdx: 20
 ---
