--- a/src/posts/projects/project-0-openfactoring.mdx
+++ b/src/posts/projects/project-0-openfactoring.mdx
@@ -10,102 +10,128 @@ pages:
   - page:
       - title: Главная
       - image: ../../assets/images/projects/project-0-openfactoring/1.png
+      - layout: ../../assets/images/projects/project-0-openfactoring/layout/1.jpg
 
   - page:
       - title: Для Поставщиков
       - image: ../../assets/images/projects/project-0-openfactoring/2.png
+      - layout: ../../assets/images/projects/project-0-openfactoring/layout/2.jpg
 
   - page:
       - title: Для Покупателей
       - image: ../../assets/images/projects/project-0-openfactoring/3.png
+      - layout: ../../assets/images/projects/project-0-openfactoring/layout/3.jpg
 
   - page:
       - title: О Факторинге
       - image: ../../assets/images/projects/project-0-openfactoring/4.png
+      - layout: ../../assets/images/projects/project-0-openfactoring/layout/4.jpg
 
   - page:
       - title: Работа в компании
       - image: ../../assets/images/projects/project-0-openfactoring/5.png
+      - layout: ../../assets/images/projects/project-0-openfactoring/layout/5.jpg
 
   - page:
       - title: Документация
       - image: ../../assets/images/projects/project-0-openfactoring/6.png
+      - layout: ../../assets/images/projects/project-0-openfactoring/layout/6.jpg
 
   - page:
       - title: Контакты
       - image: ../../assets/images/projects/project-0-openfactoring/7.png
+      - layout: ../../assets/images/projects/project-0-openfactoring/layout/7.jpg
 
   - page:
       - title: Список новостей
       - image: ../../assets/images/projects/project-0-openfactoring/8.png
+      - layout: ../../assets/images/projects/project-0-openfactoring/layout/8.jpg
 
   - page:
       - title: Новость
       - image: ../../assets/images/projects/project-0-openfactoring/9.png
+      - layout: ../../assets/images/projects/project-0-openfactoring/layout/9.jpg
 
   - page:
       - title: Вакансии
       - image: ../../assets/images/projects/project-0-openfactoring/10.png
+      - layout: ../../assets/images/projects/project-0-openfactoring/layout/10.jpg
 
   - page:
       - title: Агентский факторинг
       - image: ../../assets/images/projects/project-0-openfactoring/11.png
+      - layout: ../../assets/images/projects/project-0-openfactoring/layout/11.jpg
 
   - page:
       - title: Факторинг
       - image: ../../assets/images/projects/project-0-openfactoring/12.png
+      - layout: ../../assets/images/projects/project-0-openfactoring/layout/12.jpg
 
   - page:
       - title: Индивидуальные решения
       - image: ../../assets/images/projects/project-0-openfactoring/13.png
+      - layout: ../../assets/images/projects/project-0-openfactoring/layout/13.jpg
 
   - page:
       - title: Комплексная программа
       - image: ../../assets/images/projects/project-0-openfactoring/14.png
+      - layout: ../../assets/images/projects/project-0-openfactoring/layout/14.jpg
 
   - page:
       - title: Онлайн факторинг
       - image: ../../assets/images/projects/project-0-openfactoring/15.png
+      - layout: ../../assets/images/projects/project-0-openfactoring/layout/15.jpg
 
   - page:
       - title: О компании
       - image: ../../assets/images/projects/project-0-openfactoring/16.png
+      - layout: ../../assets/images/projects/project-0-openfactoring/layout/16.jpg
 
   - page:
       - title: FAQ-desktop
       - image: ../../assets/images/projects/project-0-openfactoring/17.png
+      - layout: ../../assets/images/projects/project-0-openfactoring/layout/17.jpg
   - page:
       - title: Заявка-1
       - image: ../../assets/images/projects/project-0-openfactoring/18.png
+      - layout: ../../assets/images/projects/project-0-openfactoring/layout/18.jpg
   - page:
       - title: Обратная-связь-1-1
       - image: ../../assets/images/projects/project-0-openfactoring/19.png
+      - layout: ../../assets/images/projects/project-0-openfactoring/layout/19.jpg
   - page:
       - title: Поставщики-страница
       - image: ../../assets/images/projects/project-0-openfactoring/20.png
+      - layout: ../../assets/images/projects/project-0-openfactoring/layout/20.jpg
   - page:
       - title: О-факторинге-страница
       - image: ../../assets/images/projects/project-0-openfactoring/21.png
+      - layout: ../../assets/images/projects/project-0-openfactoring/layout/21.jpg
 
   - page:
       - title: Факторинг Микс
       - image: ../../assets/images/projects/project-0-openfactoring/1.png
+      - layout: ../../assets/images/projects/project-0-openfactoring/layout/1.jpg
 
   - page:
       - title: Факторинг-Классик
       - image: ../../assets/images/projects/project-0-openfactoring/2.png
+      - layout: ../../assets/images/projects/project-0-openfactoring/layout/2.jpg
 
   - page:
       - title: Льготный факторинг
       - image: ../../assets/images/projects/project-0-openfactoring/3.png
+      - layout: ../../assets/images/projects/project-0-openfactoring/layout/3.jpg
 
   - page:
       - title: Факторинг Лукойл
       - image: ../../assets/images/projects/project-0-openfactoring/4.png
+      - layout: ../../assets/images/projects/project-0-openfactoring/layout/4.jpg
 
   - page:
       - title: Факторинг Лендинг
       - image: ../../assets/images/projects/project-0-openfactoring/5.png
+      - layout: ../../assets/images/projects/project-0-openfactoring/layout/5.jpg
 
 sortIdx: 0
 ---
