--- a/src/posts/projects/project-100-pichshop.mdx
+++ b/src/posts/projects/project-100-pichshop.mdx
@@ -10,5 +10,6 @@ pages:
   - page:
       - image: ../../assets/images/projects/project-100-pichshop/0.png
       - title: Pichshop
+      - layout: ../../assets/images/projects/project-100-pichshop/layout/1.png
 sortIdx: 100
 ---
