--- a/src/posts/projects/project-30-temnay-faza.mdx
+++ b/src/posts/projects/project-30-temnay-faza.mdx
@@ -10,35 +10,46 @@ pages:
   - page:
       - image: ../../assets/images/projects/project-30-temnay-faza/0.png
       - title: Главная
+      - layout: ../../assets/images/projects/project-30-temnay-faza/layout/0.png
   - page:
       - image: ../../assets/images/projects/project-30-temnay-faza/1.png
       - title: Бекстейдж
+      - layout: ../../assets/images/projects/project-30-temnay-faza/layout/0.png
   - page:
       - image: ../../assets/images/projects/project-30-temnay-faza/2.png
       - title: Бекстейдж 1
+      - layout: ../../assets/images/projects/project-30-temnay-faza/layout/0.png
   - page:
       - image: ../../assets/images/projects/project-30-temnay-faza/3.png
       - title: Магазин
+      - layout: ../../assets/images/projects/project-30-temnay-faza/layout/0.png
   - page:
       - image: ../../assets/images/projects/project-30-temnay-faza/4.png
       - title: Товар
+      - layout: ../../assets/images/projects/project-30-temnay-faza/layout/0.png
   - page:
       - image: ../../assets/images/projects/project-30-temnay-faza/5.png
       - title: Новости
+      - layout: ../../assets/images/projects/project-30-temnay-faza/layout/0.png
   - page:
       - image: ../../assets/images/projects/project-30-temnay-faza/6.png
       - title: Новость
+      - layout: ../../assets/images/projects/project-30-temnay-faza/layout/0.png
   - page:
       - image: ../../assets/images/projects/project-30-temnay-faza/7.png
       - title: Форум
+      - layout: ../../assets/images/projects/project-30-temnay-faza/layout/0.png
   - page:
       - image: ../../assets/images/projects/project-30-temnay-faza/8.png
       - title: Оформление 1
+      - layout: ../../assets/images/projects/project-30-temnay-faza/layout/0.png
   - page:
       - image: ../../assets/images/projects/project-30-temnay-faza/9.png
       - title: Оформление 2
+      - layout: ../../assets/images/projects/project-30-temnay-faza/layout/0.png
   - page:
       - image: ../../assets/images/projects/project-30-temnay-faza/10.png
       - title: Оформление 3
+      - layout: ../../assets/images/projects/project-30-temnay-faza/layout/0.png
 sortIdx: 30
 ---
