--- a/src/posts/projects/project-40-admiral-club.mdx
+++ b/src/posts/projects/project-40-admiral-club.mdx
@@ -10,47 +10,62 @@ pages:
   - page:
       - image: ../../assets/images/projects/project-40-admiral-club/0.png
       - title: Главная
+      - layout: ../../assets/images/projects/project-40-admiral-club/layout/0.png
   - page:
       - image: ../../assets/images/projects/project-40-admiral-club/1.png
       - title: Бани
+      - layout: ../../assets/images/projects/project-40-admiral-club/layout/1.png
   - page:
       - image: ../../assets/images/projects/project-40-admiral-club/2.png
       - title: Кухня
+      - layout: ../../assets/images/projects/project-40-admiral-club/layout/2.png
   - page:
       - image: ../../assets/images/projects/project-40-admiral-club/3.png
       - title: Бани single
+      - layout: ../../assets/images/projects/project-40-admiral-club/layout/3.png
   - page:
       - image: ../../assets/images/projects/project-40-admiral-club/4.png
       - title: Впечатления Лето
+      - layout: ../../assets/images/projects/project-40-admiral-club/layout/4.png
   - page:
       - image: ../../assets/images/projects/project-40-admiral-club/5.png
       - title: Впечатления Лето1
+      - layout: ../../assets/images/projects/project-40-admiral-club/layout/5.png
   - page:
       - image: ../../assets/images/projects/project-40-admiral-club/6.png
       - title: Впечатления Зима
+      - layout: ../../assets/images/projects/project-40-admiral-club/layout/6.png
   - page:
       - image: ../../assets/images/projects/project-40-admiral-club/7.png
       - title: Меню
+      - layout: ../../assets/images/projects/project-40-admiral-club/layout/7.png
   - page:
       - image: ../../assets/images/projects/project-40-admiral-club/8.png
       - title: Бронирование номеров
+      - layout: ../../assets/images/projects/project-40-admiral-club/layout/8.png
   - page:
       - image: ../../assets/images/projects/project-40-admiral-club/9.png
       - title: Впечатления Single
+      - layout: ../../assets/images/projects/project-40-admiral-club/layout/9.png
   - page:
       - image: ../../assets/images/projects/project-40-admiral-club/10.png
       - title: Впечатления бронирование
+      - layout: ../../assets/images/projects/project-40-admiral-club/layout/10.png
   - page:
       - image: ../../assets/images/projects/project-40-admiral-club/11.png
       - title: Сертификаты
+      - layout: ../../assets/images/projects/project-40-admiral-club/layout/11.png
   - page:
       - image: ../../assets/images/projects/project-40-admiral-club/12.png
       - title: Прайс лист
+      - layout: ../../assets/images/projects/project-40-admiral-club/layout/12.png
   - page:
       - image: ../../assets/images/projects/project-40-admiral-club/13.png
       - title: Главная
+      - layout: ../../assets/images/projects/project-40-admiral-club/layout/13.png
   - page:
       - image: ../../assets/images/projects/project-40-admiral-club/14.png
       - title: Главная
+      - layout: ../../assets/images/projects/project-40-admiral-club/layout/14.png
 sortIdx: 40
 ---
