--- a/src/posts/projects/project-50-monte-ebay.mdx
+++ b/src/posts/projects/project-50-monte-ebay.mdx
@@ -9,9 +9,11 @@ siteLink: https://monte-ebay.igromov.digital/
 pages:
   - page:
       - image: ../../assets/images/projects/project-50-monte-ebay/0.png
-      - title: Главная,
+      - title: Главная
+      - layout: ../../assets/images/projects/project-50-monte-ebay/layout/0.jpg
   - page:
       - image: ../../assets/images/projects/project-50-monte-ebay/1.png
       - title: Инфо
+      - layout: ../../assets/images/projects/project-50-monte-ebay/layout/1.png
 sortIdx: 50
 ---
