--- a/src/posts/projects/project-60-cosmospose.mdx
+++ b/src/posts/projects/project-60-cosmospose.mdx
@@ -10,5 +10,6 @@ pages:
   - page:
       - image: ../../assets/images/projects/project-60-cosmospose/0.png
       - title: Title
+      - layout: ../../assets/images/projects/project-60-cosmospose/layout/0.png
 sortIdx: 60
 ---
