--- a/src/posts/projects/project-70-acpgame.mdx
+++ b/src/posts/projects/project-70-acpgame.mdx
@@ -9,33 +9,43 @@ siteLink: https://acpgame.igromov.digital/
 pages:
   - page:
       - image: ../../assets/images/projects/project-70-acpgame/0.png
-      - title: Главная,
+      - title: Главная
+      - layout: ../../assets/images/projects/project-70-acpgame/layout/0.png
   - page:
       - image: ../../assets/images/projects/project-70-acpgame/1.png
-      - title: В СМИ,
+      - title: В СМИ
+      - layout: ../../assets/images/projects/project-70-acpgame/layout/1.png
   - page:
       - image: ../../assets/images/projects/project-70-acpgame/2.png
-      - title: Игры,
+      - title: Игры
+      - layout: ../../assets/images/projects/project-70-acpgame/layout/2.png
   - page:
       - image: ../../assets/images/projects/project-70-acpgame/3.png
-      - title: Команда,
+      - title: Команда
+      - layout: ../../assets/images/projects/project-70-acpgame/layout/3.png
   - page:
       - image: ../../assets/images/projects/project-70-acpgame/4.png
-      - title: О нас,
+      - title: О нас
+      - layout: ../../assets/images/projects/project-70-acpgame/layout/4.png
   - page:
       - image: ../../assets/images/projects/project-70-acpgame/5.png
-      - title: Битва-Корпораций,
+      - title: Битва-Корпораций
+      - layout: ../../assets/images/projects/project-70-acpgame/layout/4.png
   - page:
       - image: ../../assets/images/projects/project-70-acpgame/6.png
-      - title: ФОТОАЛЬБОМЫ,
+      - title: ФОТОАЛЬБОМЫ
+      - layout: ../../assets/images/projects/project-70-acpgame/layout/6.png
   - page:
       - image: ../../assets/images/projects/project-70-acpgame/7.png
-      - title: Корпоративные-Игры,
+      - title: Корпоративные-Игры
+      - layout: ../../assets/images/projects/project-70-acpgame/layout/7.png
   - page:
       - image: ../../assets/images/projects/project-70-acpgame/8.png
-      - title: Контакты,
+      - title: Контакты
+      - layout: ../../assets/images/projects/project-70-acpgame/layout/8.png
   - page:
       - image: ../../assets/images/projects/project-70-acpgame/9.png
       - title: Видео
+      - layout: ../../assets/images/projects/project-70-acpgame/layout/9.png
 sortIdx: 70
 ---
