--- a/src/posts/projects/project-80-panda.mdx
+++ b/src/posts/projects/project-80-panda.mdx
@@ -9,24 +9,31 @@ siteLink: https://panda.igromov.digital/
 pages:
   - page:
       - image: ../../assets/images/projects/project-80-panda/0.png
-      - title: Главная,
+      - title: Главная
+      - layout: ../../assets/images/projects/project-80-panda/layout/0.png
   - page:
       - image: ../../assets/images/projects/project-80-panda/1.png
-      - title: График,
+      - title: График
+      - layout: ../../assets/images/projects/project-80-panda/layout/1.png
   - page:
       - image: ../../assets/images/projects/project-80-panda/2.png
-      - title: Опросник,
+      - title: Опросник
+      - layout: ../../assets/images/projects/project-80-panda/layout/2.png
   - page:
       - image: ../../assets/images/projects/project-80-panda/3.png
-      - title: Инфо,
+      - title: Инфо
+      - layout: ../../assets/images/projects/project-80-panda/layout/3.png
   - page:
       - image: ../../assets/images/projects/project-80-panda/4.png
-      - title: Результат,
+      - title: Результат
+      - layout: ../../assets/images/projects/project-80-panda/layout/4.png
   - page:
       - image: ../../assets/images/projects/project-80-panda/5.png
-      - title: Инфо,
+      - title: Инфо
+      - layout: ../../assets/images/projects/project-80-panda/layout/5.png
   - page:
       - image: ../../assets/images/projects/project-80-panda/6.png
       - title: Инфо2
+      - layout: ../../assets/images/projects/project-80-panda/layout/6.png
 sortIdx: 80
 ---
