--- a/src/posts/projects/project-90-holybasil.mdx
+++ b/src/posts/projects/project-90-holybasil.mdx
@@ -9,12 +9,15 @@ siteLink: https://holybasil.igromov.digital/
 pages:
   - page:
       - image: ../../assets/images/projects/project-90-holybasil/0.png
-      - title: Главная,
+      - title: Главная
+      - layout: ../../assets/images/projects/project-90-holybasil/layout/0.png
   - page:
       - image: ../../assets/images/projects/project-90-holybasil/1.png
-      - title: Доставка,
+      - title: Доставка
+      - layout: ../../assets/images/projects/project-90-holybasil/layout/1.png
   - page:
       - image: ../../assets/images/projects/project-90-holybasil/2.png
       - title: Политика
+      - layout: ../../assets/images/projects/project-90-holybasil/layout/2.png
 sortIdx: 90
 ---
