--- a/src/posts/projects/project-110-hristina-cosmetics.mdx
+++ b/src/posts/projects/project-110-hristina-cosmetics.mdx
@@ -9,33 +9,44 @@ siteLink: https://hristina-cosmetics.igromov.digital/
 pages:
   - page:
       - image: ../../assets/images/projects/project-110-hristina-cosmetics/0.png
-      - title: Главная,
+      - title: Главная
+      - layout: ../../assets/images/projects/project-110-hristina-cosmetics/layout/0.png
   - page:
       - image: ../../assets/images/projects/project-110-hristina-cosmetics/1.png
-      - title: Возврат,
+      - title: Возврат
+      - layout: ../../assets/images/projects/project-110-hristina-cosmetics/layout/1.png
+      
   - page:
       - image: ../../assets/images/projects/project-110-hristina-cosmetics/2.png
-      - title: Список-желаний,
+      - title: Список-желаний
+      - layout: ../../assets/images/projects/project-110-hristina-cosmetics/layout/2.png
   - page:
       - image: ../../assets/images/projects/project-110-hristina-cosmetics/3.png
-      - title: Оформления-заказа,
+      - title: Оформления-заказа
+      - layout: ../../assets/images/projects/project-110-hristina-cosmetics/layout/3.png
   - page:
       - image: ../../assets/images/projects/project-110-hristina-cosmetics/4.png
-      - title: Корзина,
+      - title: Корзина
+      - layout: ../../assets/images/projects/project-110-hristina-cosmetics/layout/4.png
   - page:
       - image: ../../assets/images/projects/project-110-hristina-cosmetics/5.png
-      - title: Контакты,
+      - title: Контакты
+      - layout: ../../assets/images/projects/project-110-hristina-cosmetics/layout/5.png
   - page:
       - image: ../../assets/images/projects/project-110-hristina-cosmetics/6.png
-      - title: О-бренде,
+      - title: О-бренде
+      - layout: ../../assets/images/projects/project-110-hristina-cosmetics/layout/6.png
   - page:
       - image: ../../assets/images/projects/project-110-hristina-cosmetics/7.png
-      - title: Доставка-оплата,
+      - title: Доставка-оплата
+      - layout: ../../assets/images/projects/project-110-hristina-cosmetics/layout/7.png
   - page:
       - image: ../../assets/images/projects/project-110-hristina-cosmetics/8.png
-      - title: Страница-товара,
+      - title: Страница-товара
+      - layout: ../../assets/images/projects/project-110-hristina-cosmetics/layout/8.png
   - page:
       - image: ../../assets/images/projects/project-110-hristina-cosmetics/9.png
       - title: Уход-за-лицом
+      - layout: ../../assets/images/projects/project-110-hristina-cosmetics/layout/9.png
 sortIdx: 110
 ---
