--- a/src/posts/projects/project-120-mark-landing-project.mdx
+++ b/src/posts/projects/project-120-mark-landing-project.mdx
@@ -10,5 +10,6 @@ pages:
   - page:
       - image: ../../assets/images/projects/project-120-mark-landing-project/0.png
       - title: Главная
+      - layout: ../../assets/images/projects/project-120-mark-landing-project/layout/0.png
 sortIdx: 120
 ---
